--- a/TUBES_DATMIN.ipynb
+++ b/TUBES_DATMIN.ipynb
@@ -1237,7 +1237,12 @@
       "t=2025-06-06T18:17:14+0700 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=952cead6f7a3 err=\"read tcp 192.168.110.47:64998->3.134.73.173:443: wsarecv: An established connection was aborted by the software in your host machine.\"\n",
       "t=2025-06-06T18:17:14+0700 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=89f3ceae2c0e clientid=fd169fbffe0a596e3da65fd8647792bf\n",
       "t=2025-06-06T18:17:24+0700 lvl=eror msg=\"failed to reconnect session\" obj=tunnels.session err=\"failed to dial ngrok server with address \\\"connect.us.ngrok-agent.com:443\\\": dial tcp: lookup connect.us.ngrok-agent.com: i/o timeout\"\n",
-      "t=2025-06-06T18:17:26+0700 lvl=eror msg=\"failed to reconnect session\" obj=tunnels.session err=\"failed to dial ngrok server with address \\\"connect.us.ngrok-agent.com:443\\\": dial tcp: lookup connect.us.ngrok-agent.com: no such host\"\n"
+      "t=2025-06-06T18:17:26+0700 lvl=eror msg=\"failed to reconnect session\" obj=tunnels.session err=\"failed to dial ngrok server with address \\\"connect.us.ngrok-agent.com:443\\\": dial tcp: lookup connect.us.ngrok-agent.com: no such host\"\n",
+      "t=2025-06-06T18:44:00+0700 lvl=eror msg=\"heartbeat timeout, terminating session\" obj=tunnels.session obj=csess id=52d09e85abb4 clientid=fd169fbffe0a596e3da65fd8647792bf\n",
+      "t=2025-06-06T18:44:00+0700 lvl=eror msg=\"session closed, starting reconnect loop\" obj=tunnels.session obj=csess id=952cead6f7a3 err=\"read tcp 192.168.110.47:65486->3.12.62.205:443: wsarecv: An established connection was aborted by the software in your host machine.\"\n",
+      "t=2025-06-06T18:44:10+0700 lvl=eror msg=\"failed to reconnect session\" obj=tunnels.session err=\"failed to dial ngrok server with address \\\"connect.us.ngrok-agent.com:443\\\": dial tcp: lookup connect.us.ngrok-agent.com: i/o timeout\"\n",
+      "t=2025-06-06T18:44:21+0700 lvl=eror msg=\"failed to reconnect session\" obj=tunnels.session err=\"failed to dial ngrok server with address \\\"connect.us.ngrok-agent.com:443\\\": dial tcp: lookup connect.us.ngrok-agent.com: i/o timeout\"\n",
+      "t=2025-06-06T18:44:33+0700 lvl=eror msg=\"failed to reconnect session\" obj=tunnels.session err=\"failed to send authentication request: failed to fetch CRL. errors encountered: timed out fetching CRL\"\n"
      ]
     }
    ],
